--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "mongodb": "^3.0.5",
     "mongoose": "^5.0.11"
   },
   "devDependencies": {
