--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "lodash": "^4.17.5",
     "mongodb": "^3.0.5",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
