--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.11",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "validator": "^9.4.1"
   },
   "devDependencies": {
