--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "coursesapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
