--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,42 @@
 node_modules/
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# compiled output
+angular-src/dist
+
+
+# dependencies
+angular-src/node_modules
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+testem.log
+/typings
+
+# e2e
+angular-src/e2e/*.js
+angular-src/e2e/*.map
+
+# System Files
+angular-src/.DS_Store
+angular-src/Thumbs.db
